--- a/itrack.html
+++ b/itrack.html
@@ -102,6 +102,7 @@
 
                     </ul>
                   </li>
+                  <li><a href="gallery.html">Gallery</a></li>
                   <li><a href="special_sessions.html">Special Sessions</a></li>
 
                   <li class="current dropdown"><a href="#">Tracks</a>
