--- a/speakers.html
+++ b/speakers.html
@@ -124,11 +124,11 @@
                                              <li><a href="inaugural-program.html">Inaugural Program</a></li>
                                              <li><a href="tutorial.html">Tutorials</a></li>
                                              <!--<li><a href="social.html">Social Program/Tour</a></li>-->
-
                                          </ul>
                                      </li>
                                      <!-- <li><a href="special_sessions.html">Special Sessions</a></li> -->
-                                     <a><a href="gallery.html">Gallery</a></a>
+                                     <li><a href="gallery.html">Gallery</a></li>
+
                                      <li class="dropdown"><a href="#">Special Tracks</a>
                                          <ul>
                                              <li><a href="itrack.html">Special Industrial Track (SIT)</a></li>
