--- a/submissions.html
+++ b/submissions.html
@@ -4,14 +4,17 @@
  <head>
      <meta charset="utf-8">
      <title>TENCON 2019 | Submissions</title><!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-39379599-10"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-39379599-10"></script>
+     <script>
+         window.dataLayer = window.dataLayer || [];
 
-  gtag('config', 'UA-39379599-10');
-</script>
+         function gtag() {
+             dataLayer.push(arguments);
+         }
+         gtag('js', new Date());
+
+         gtag('config', 'UA-39379599-10');
+     </script>
 
      <!-- Stylesheets -->
      <link href="css/bootstrap.css" rel="stylesheet">
@@ -107,7 +110,7 @@
                                          </ul>
                                      </li>
                                      <!-- <li><a href="special_sessions.html">Special Sessions</a></li> -->
-                                     <a><a href="gallery.html">Gallery</a></a>
+                                     <li><a href="gallery.html">Gallery</a></li>
                                      <li class="dropdown"><a href="#">Special Tracks</a>
                                          <ul>
                                              <li><a href="itrack.html">Special Industrial Track (SIT)</a></li>
@@ -151,7 +154,8 @@
 
                              <div class="navbar-collapse collapse clearfix">
                                  <ul class="navigation clearfix">
-                                     <li><a href="index.html">Home</a></li> <!--##-->
+                                     <li><a href="index.html">Home</a></li>
+                                     <!--##-->
 
                                      <li class="dropdown"><a href="about.html">About</a>
                                          <ul>
@@ -214,30 +218,37 @@
              <div class="container">
                  <div class="row">
                      <div class="col-md-10">
-                 <div class="sec-title text-left">
-                     <h2>Full/Final Paper Submissions</h2>
+                         <div class="sec-title text-left">
+                             <h2>Full/Final Paper Submissions</h2>
 
-                     <br>
-                     <p align="center">
-                         
-                        <a class="theme-btn btn-style-one" href="https://itekcmsonline.com/tencon19/paper/" target="_blank">Upload Your Final Paper</a></p>
-                     <br>
-                        <h3>Full/Final Paper Submission Format</h3>
+                             <br>
+                             <p align="center">
 
-                     <p align="justify">Accepted and Revision Required Paper authors are advised to make necessary
-                         corrections and modifications suggested by the reviewers in your final manuscript
-                         and upload the final papers on or before <font color="red"><b>8-September-2019</b></font>.
-                         Papers for presentations should conform to the IEEE format and specifications.
-                         Authors to submit the full final paper (Maximum 6 pages, double-column US letter size) as PDF
-                         using the IEEE templates. Extra pages beyond this would require additional page length charges.
-                         The additional payment required for extra pages is Rs.2000/page for Indian authors of all
-                         categories and USD 40/page for all categories of foreign authors. The IEEE paper template can
-                         be downloaded
-                         from the link given below.<a class="url"
-                             href="http://www.ieee.org/conferences_events/conferences/publishing/templates.html">
-                             http://www.ieee.org/conferences_events/conferences/publishing/templates.html</a>.
+                                 <a class="theme-btn btn-style-one" href="https://itekcmsonline.com/tencon19/paper/"
+                                     target="_blank">Upload Your Final Paper</a></p>
+                             <br>
+                             <h3>Full/Final Paper Submission Format</h3>
 
-                         <!--
+                             <p align="justify">Accepted and Revision Required Paper authors are advised to make
+                                 necessary
+                                 corrections and modifications suggested by the reviewers in your final manuscript
+                                 and upload the final papers on or before <font color="red"><b>8-September-2019</b>
+                                 </font>.
+                                 Papers for presentations should conform to the IEEE format and specifications.
+                                 Authors to submit the full final paper (Maximum 6 pages, double-column US letter size)
+                                 as PDF
+                                 using the IEEE templates. Extra pages beyond this would require additional page length
+                                 charges.
+                                 The additional payment required for extra pages is Rs.2000/page for Indian authors of
+                                 all
+                                 categories and USD 40/page for all categories of foreign authors. The IEEE paper
+                                 template can
+                                 be downloaded
+                                 from the link given below.<a class="url"
+                                     href="http://www.ieee.org/conferences_events/conferences/publishing/templates.html">
+                                     http://www.ieee.org/conferences_events/conferences/publishing/templates.html</a>.
+
+                                 <!--
 TENCON takes plagiarism very seriously and regard plagiarism as a
 professional misconduct. Papers will be screened for plagiarism and when identified the paper will be rejected. <br></p>
 <br/>
@@ -250,76 +261,99 @@ professional misconduct. Papers will be screened for plagiarism and when identif
 <p align="justify">The authors of the accepted papers will be allowed to make corrections in accordance with the suggestions of the reviewers and submit final camera-ready papers within the stipulated deadline. The conference proceedings will be distributed amongst the participants during the conference.</p>
 -->
 
-                         <br />
-                         <br />
-                         <hr>
-                         <h3>Using IEEE PDF eXpress</h3>
+                                 <br />
+                                 <br />
+                                 <hr>
+                                 <h3>Using IEEE PDF eXpress</h3>
 
 
-                         <p>According to the IEEE Xplore Requirements for PDF, all conference articles submitted for
-                             inclusion in IEEE Xplore must adhere to the IEEE Xplore PDF specification for
-                             compatibility.
-                             IEEE PDF eXpress is a free service to IEEE conferences, allowing their authors to make IEEE
-                             Xplore-compatible PDFs (Conversion function) or to check PDFs that authors have made
-                             themselves
-                             for IEEE Xplore compatibility (PDF Check function). TheTENCON 2019 has registered for use
-                             of the IEEE tool: IEEE PDF eXpress. It is important to note that submitting a file to IEEE
-                             PDF
-                             eXpress is only for creation of a compliant PDF file, you must still submit your final
-                             paper through the On-Line Full Paper Submission system.</p>
+                                 <p>According to the IEEE Xplore Requirements for PDF, all conference articles submitted
+                                     for
+                                     inclusion in IEEE Xplore must adhere to the IEEE Xplore PDF specification for
+                                     compatibility.
+                                     IEEE PDF eXpress is a free service to IEEE conferences, allowing their authors to
+                                     make IEEE
+                                     Xplore-compatible PDFs (Conversion function) or to check PDFs that authors have
+                                     made
+                                     themselves
+                                     for IEEE Xplore compatibility (PDF Check function). TheTENCON 2019 has registered
+                                     for use
+                                     of the IEEE tool: IEEE PDF eXpress. It is important to note that submitting a file
+                                     to IEEE
+                                     PDF
+                                     eXpress is only for creation of a compliant PDF file, you must still submit your
+                                     final
+                                     paper through the On-Line Full Paper Submission system.</p>
 
-                         <br />
-                         <hr>
-                         <h3>IEEE PDF eXpress</h3>
-                         <p>Papers must be compatible with IEEE Xplore format. Papers that not fit with the format
-                             cannot be published in IEEE Xplore.
-                             To meet this requirement authors should verify the files using the IEEE PDF eXpress system.
-                             IEEE PDF eXpress can generate compatible PDF files with IEEE format from the source files
-                             (Conversion Function)
-                             or verify that the PDF files are compatible with the IEEE Xplore format (PDF Check
-                             function). PDFeXpress facility will be available from <font color="red">
-                                 <b>15-August-2019</b></font>. The steps are:</p>
-                         <br>
-                         <ul>
-                             <li>1. Access the website of IEEE PDF eXpress: <a href="http://www.pdf-express.org/">
-                                     <font color="red"> www.pdf-express.org</font>
-                                 </a></li>
-                             <li>2. Enter the conference ID: <font color="red"><b>47323XP</b></font>
-                             </li>
-                             <li>3. If you do not have an account select "New Users &ndash; Click Here"" and follow the
-                                 steps to register. Otherwise, sign in with your email address and password.</li>
-                             <li>4. Select "Create New Title" for every full paper.</li>
-                             <li>5. Among the data that identify their work and select "Submit File for Checking or
-                                 Converting".</li>
-                             <li>6. Select "Browse" and find the file. The selected file may be a PDF for compatibility
-                                 or file in another format to be converted to PDF. For more details go to the website
-                                 http://www.pdf-express.org/frhelp.asp.</li>
-                             <li>7. Select "Upload File". You will receive confirmation that the load was successful
-                                 through an email.</li>
-                             <li>8. You will receive an email with your new PDF file, PDF verified or converted by the
-                                 IEEE PDF eXpress system. If a PDF file is up to verify, the email will indicate whether
-                                 it passed or failed.</li>
-                     </p>
+                                 <br />
+                                 <hr>
+                                 <h3>IEEE PDF eXpress</h3>
+                                 <p>Papers must be compatible with IEEE Xplore format. Papers that not fit with the
+                                     format
+                                     cannot be published in IEEE Xplore.
+                                     To meet this requirement authors should verify the files using the IEEE PDF eXpress
+                                     system.
+                                     IEEE PDF eXpress can generate compatible PDF files with IEEE format from the source
+                                     files
+                                     (Conversion Function)
+                                     or verify that the PDF files are compatible with the IEEE Xplore format (PDF Check
+                                     function). PDFeXpress facility will be available from <font color="red">
+                                         <b>15-August-2019</b></font>. The steps are:</p>
+                                 <br>
+                                 <ul>
+                                     <li>1. Access the website of IEEE PDF eXpress: <a
+                                             href="http://www.pdf-express.org/">
+                                             <font color="red"> www.pdf-express.org</font>
+                                         </a></li>
+                                     <li>2. Enter the conference ID: <font color="red"><b>47323XP</b></font>
+                                     </li>
+                                     <li>3. If you do not have an account select "New Users &ndash; Click Here"" and
+                                         follow the
+                                         steps to register. Otherwise, sign in with your email address and password.
+                                     </li>
+                                     <li>4. Select "Create New Title" for every full paper.</li>
+                                     <li>5. Among the data that identify their work and select "Submit File for Checking
+                                         or
+                                         Converting".</li>
+                                     <li>6. Select "Browse" and find the file. The selected file may be a PDF for
+                                         compatibility
+                                         or file in another format to be converted to PDF. For more details go to the
+                                         website
+                                         http://www.pdf-express.org/frhelp.asp.</li>
+                                     <li>7. Select "Upload File". You will receive confirmation that the load was
+                                         successful
+                                         through an email.</li>
+                                     <li>8. You will receive an email with your new PDF file, PDF verified or converted
+                                         by the
+                                         IEEE PDF eXpress system. If a PDF file is up to verify, the email will indicate
+                                         whether
+                                         it passed or failed.</li>
+                             </p>
 
-                     <br>
-                     <p align="center">                        <a class="theme-btn btn-style-one" href="https://itekcmsonline.com/tencon19/paper/" target="_blank">Upload Your Final Paper</a></p>
-                    </p>
+                             <br>
+                             <p align="center"> <a class="theme-btn btn-style-one"
+                                     href="https://itekcmsonline.com/tencon19/paper/" target="_blank">Upload Your Final
+                                     Paper</a></p>
+                             </p>
 
-                     <br>
-                     <p>Corresponding author of the paper will receive a separate e-mail for IEEE e-copyright submission
-                         portal with the login/password to complete the Electronic Copyright Transfer Online.</p>
-                     <br>
-                     <p>All questions about final paper submission should be sent to the Publication Chair <a
-                             class="url" href="mailto:suresh.kumaraswamy@gmail.com">suresh.kumaraswamy@gmail.com</a>.
+                             <br>
+                             <p>Corresponding author of the paper will receive a separate e-mail for IEEE e-copyright
+                                 submission
+                                 portal with the login/password to complete the Electronic Copyright Transfer Online.
+                             </p>
+                             <br>
+                             <p>All questions about final paper submission should be sent to the Publication Chair <a
+                                     class="url"
+                                     href="mailto:suresh.kumaraswamy@gmail.com">suresh.kumaraswamy@gmail.com</a>.
 
-                         <br>
-                         <br>
-                         <!--Info Column-->
+                                 <br>
+                                 <br>
+                                 <!--Info Column-->
 
+                         </div>
+                     </div>
                  </div>
              </div>
-            </div>
-        </div>
      </div>
      </section>
 
@@ -334,7 +368,8 @@ professional misconduct. Papers will be screened for plagiarism and when identif
                  <div class="row">
                      <div class="col-md-4 col-sm-4 col-xs-12 text-left">
                          <i>Powered by</i>:
-<a class="expert-link" href="https://cecieee.org/devcom-walk-through/" target="_blank">Devcom CEC</a>&nbsp;&&nbsp;
+                         <a class="expert-link" href="https://cecieee.org/devcom-walk-through/" target="_blank">Devcom
+                             CEC</a>&nbsp;&&nbsp;
                          <a href="http://www.rpsonline.com.sg" target="_blank" class="expert-link"
                              style="font-weight: initial;">Research Publishing Services</a>
                      </div><!-- /.col-md-4 -->
