--- a/kerala.html
+++ b/kerala.html
@@ -124,7 +124,8 @@
                                          </ul>
                                      </li>
                                      <!-- <li><a href="special_sessions.html">Special Sessions</a></li> -->
-                                     <a><a href="gallery.html">Gallery</a></a>
+                                     <li><a href="gallery.html">Gallery</a></li>
+
                                      <li class="dropdown"><a href="#">Special Tracks</a>
                                          <ul>
                                              <li><a href="itrack.html">Special Industrial Track (SIT)</a></li>
