--- a/itrack.html
+++ b/itrack.html
@@ -103,9 +103,8 @@
                     </ul>
                   </li>
                   <li><a href="gallery.html">Gallery</a></li>
-                  <li><a href="special_sessions.html">Special Sessions</a></li>
 
-                  <li class="current dropdown"><a href="#">Tracks</a>
+                  <li class="current dropdown"><a href="#">Special Tracks</a>
                     <ul>
                       <li><a href="itrack.html">Special Industrial Track (SIT)</a></li>
                       <li><a href="htrack.html">Humanitarian Activities Track</a></li>
